--- a/scss/componetns/contact.scss
+++ b/scss/componetns/contact.scss
@@ -25,6 +25,9 @@
           text-decoration: none;
           color: black;
      }
+     a:hover {
+          color: blue;
+     }
 }
 .map_box{
      width: 80%;
