--- a/scss/componetns/menu.scss
+++ b/scss/componetns/menu.scss
@@ -20,8 +20,11 @@
           display: inline-block;
           padding-top: 23px;
           font-size: 20px;
-          padding-left: 50px;
+          padding-left: 4vw;
           color: white;
           text-decoration: none;
+     }
+     a:hover {
+          color: grey;
      }
 }
