--- a/scss/componetns/menu.scss
+++ b/scss/componetns/menu.scss
@@ -1,7 +1,7 @@
 #menu {
      background-color: black;
      width: 100%;
-     height: 64px;
+     height: 6vh;
      position: fixed;
      z-index: 1;
 }
@@ -18,8 +18,8 @@
      color: white;
      a {
           display: inline-block;
-          padding-top: 23px;
-          font-size: 20px;
+          padding-top: 3vh;
+          font-size: 2vh;
           padding-left: 4vw;
           color: white;
           text-decoration: none;
