--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,13 @@
-@import "./componetns/about.scss";
-@import "./componetns/contact.scss";
-@import "./componetns/footer.scss";
-@import "./componetns/home.scss";
-@import "./componetns/partners.scss";
-@import "./componetns/products.scss";
-@import "./componetns/menu.scss";
-@import "./componetns/paralax.scss";
-@import "./componetns/setion4.scss";
-@import "./componetns/info.scss";
+@import "./partials/about.scss";
+@import "./partials/contact.scss";
+@import "./partials/footer.scss";
+@import "./partials/home.scss";
+@import "./partials/partners.scss";
+@import "./partials/products.scss";
+@import "./partials/menu.scss";
+@import "./partials/paralax.scss";
+@import "./partials/setion4.scss";
+@import "./partials/info.scss";
 
 * {
      margin: 0;
